--- a/src/styles/sections/reature.scss
+++ b/src/styles/sections/reature.scss
@@ -180,10 +180,16 @@
         width: 100%;
     }
     & .feature-slide-box {
+        scale: 0.9;
         padding-top: 40px;
         padding-left: 20px;
         padding-right: 20px;
         cursor: grab;
+        @media (min-width: 320px) and (max-width: 530px) {
+            scale: 0.9;
+            padding-right: 0;
+            padding-left: 0;
+        }
         & .feature-slide-img {
             position: relative;
         }
